--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,12 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Bachelor Thesis, IIT Roorkee"
+excerpt: "Mechanical and Control System Design of Human Assisting Droid"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+<a href="http://JayantTeotia16.github.io/files/BTP_Report.pdf">Bachelor Thesis Report</a>
+
+* Spearheaded the design and fabrication of a warehouse robot, incorporating a stationary robotic arm and a four-wheeled differential drive bot.
+* Engineered an electrical circuit and developed a control algorithm for Bluetooth-enabled teleoperation of the bot.
+* Successfully integrated the control algorithm into a simulator to facilitate autonomous obstacle avoidance for the differential drive bot within the ROS (Robot Operating System) framework.
+* Implemented advanced techniques such as SLAM (Simultaneous Localization and Mapping) and gap-following strategy for effective obstacle avoidance.
