--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,9 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Projects"
 permalink: /portfolio/
 author_profile: true
+read_more: disabled
 ---
 
 {% include base_path %}
