--- a/_pages/social.html
+++ b/_pages/social.html
@@ -1,13 +1,13 @@
 ---
 layout: archive
 title: "Contributing Back to the Society"
-permalink: /posts/
+permalink: /social/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.posts %}
+{% for post in site.social %}
   {% include archive-single.html %}
 {% endfor %}
